# supermcp

./: .gitignore  ALEMBIC_SETUP_COMPLETE.md  BACKEND_INTEGRATION_COMPLETE.md  ENDPOINT_MIGRATION.md  LICENSE  MIGRATION_SUCCESS.md  README.md  SYSTEM_OVERVIEW.md  cookies.txt  cookies_new.txt  sample-cmp.txt
api/: ALEMBIC_MIGRATIONS.md  CASCADE_DELETE_IMPLEMENTATION.md  CONNECTOR_MODE_ENUM_FIX.md  CONNECTOR_UUID_MIGRATION.md  DATABASE_SETUP.md  MCP_CONNECTORS_MIGRATION_SUMMARY.md  MCP_SERVER_RELATIONSHIP.md  MD5_SECRET_CONSTRAINT_SUMMARY.md  MIGRATION_SUMMARY.md  TWO_STEP_CONNECTOR_REGISTRATION.md  UUID_MIGRATION_GUIDE.md  UUID_SERVER_MIGRATION_GUIDE.md  __init__.py  alembic.ini  config.py  create_superuser.py  database.py  datatypes.py  debug_server.py  main.py  models.py  pyproject.toml  test_app.py  test_relationship.py  update_server_urls_simple.py  users.py  utils.py
api/alembic/: env.py
api/alembic/versions/: 0c86ec73bbae_add_template_name_and_template_args_to_.py  124b34561ecc_fix_foreign_key_constraints_remove_.py  142fd787f1e7_initial_migration_create_connector_.py  1a19129680dc_remove_connectorconfiguration_table_and_.py  2ef36bf0c572_update_mcp_server_tools_model.py  472e4f9de459_add_mcp_server_tools_table.py  4b1755316ae8_add_server_url_to_mcp_servers.py  4ee661f6d6bc_remove_server_id_add_connector_name_and_.py  540d516e584e_fix_cascade_delete_constraints.py  543a0ca15c86_convert_connector_id_to_uuid.py  5ddae4192e08_add_user_relationships_to_all_models.py  756941f2c55a_update_mcpconnector_model_with_new_.py  75ec8f84a2b1_remove_custom_role_field_use_fastapi_.py  902b28846d94_add_created_at_and_updated_at_to_.py  910ded28396f_add_expires_at_to_mcp_server_tokens.py  925f850e78fc_fix_mcp_server_tools_schema_with_.py  937bb56cd37e_fix_connector_id_type_to_integer.py  a0a23a61e7cd_add_user_roles_and_connector_access_.py  a5d42366c591_add_cascade_delete_to_connector_access.py  afcc8ff55755_add_fastapi_users_user_table.py  c2608651c99d_add_new_models_structure.py  d62570fd4964_update_mcp_server_tools_make_template_.py  e79dee610a78_add_mode_and_secret_to_connectors.py  f1fb9ea4a9e2_add_mcpserver_table_and_relationship_.py  f8afdb2a25f6_convert_integer_ids_to_uuid.py  facb50928abc_add_md5_constraint_to_secret.py
app/: .dockerignore  DOCKER.md  Dockerfile  Dockerfile.dev  alembic.ini  entrypoint.sh  env.tmp  log-mig.txt  logs.txt  migrate.sh  pyproject.toml  test_observability.py
connectors/databricks/: Dockerfile.dev  README.md  __init__.py  db_manager.py  entrypoint.sh  main.py  pyproject.toml  schema.py
connectors/databricks/media/: README.md
connectors/grafana/: Dockerfile.dev  IMPLEMENTATION_SUMMARY.md  INTEGRATION_TEST.md  README.md  __init__.py  entrypoint.sh  main.py  pyproject.toml  pytest.ini  run_tests.sh  schema.py  session_manager.py  test_session_manager.py
connectors/kubernetes/: Dockerfile.dev  __init__.py  entrypoint.sh  main.py  pyproject.toml  schema.py  session_manager.py
connectors/mssql/: Dockerfile.dev  README.md  __init__.py  db_manager.py  entrypoint.sh  main.py  pyproject.toml  pytest.ini  run_tests.sh  schema.py  verify_driver.sh
connectors/neo4j/: Dockerfile.dev  __init__.py  db_manager.py  main.py  pyproject.toml  schema.py
connectors/neo4j/example/: README.md  docker-compose.test.yml  seed-neo4j.sh  seed_data.py
connectors/neo4j/example/init-data/: seed-data.cypher
connectors/postgres/: Dockerfile.dev  db_manager.py  entrypoint.sh  main.py  pyproject.toml  pytest.ini  run_tests.sh  schema.py  test_db_manager.py  test_db_manager_integration.py
connectors/snowflake/: Dockerfile.dev  README.md  __init__.py  db_manager.py  main.py  pyproject.toml  schema.py
connectors/snowflake/media/: README.md
connectors/sql_db/: README_filtering.md  __init__.py  cc.py  config.py  constants.py  dynamic_servers.py  example_templates.py  mcp_client.py  middleware.py  new_mcp_cors.py  openapi_mcp.py  pyproject.toml  schema.py  star.py  test_filtering.py  utils.py
connectors/tenants_sqldb/: ARCHITECTURE.md  Dockerfile.dev  QUICKSTART.md  README.md  __init__.py  db_manager.py  entrypoint.sh  example_usage.py  main.py  pyproject.toml  schema.py
dockers/: docker-compose.dev.yml  docker-compose.yml  docker-connectors-compose.yml
mcp_pkg/: IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  TEMPLATE_REGISTRATION_GUIDE.md  middleware.py  pyproject.toml  setup.py  template_registery.py
mcp_pkg/mcp_pkg/: __init__.py  auth.py  config.py  dynamic_mcp.py  middleware.py  schema.py  singletone_server.py  template_registery.py
mcp_tools/: pyproject.toml
mcp_tools/connectors/: __init__.py
mcp_tools/connectors/sql_db/: __init__.py  main.py  new_mcp.py  new_mcp_cors.py  pyproject.toml  schema.py  tools.py  utils.py
versions/: 0c86ec73bbae_add_template_name_and_template_args_to_.py  124b34561ecc_fix_foreign_key_constraints_remove_.py  142fd787f1e7_initial_migration_create_connector_.py  1a19129680dc_remove_connectorconfiguration_table_and_.py  2ef36bf0c572_update_mcp_server_tools_model.py  472e4f9de459_add_mcp_server_tools_table.py  4b1755316ae8_add_server_url_to_mcp_servers.py  4ee661f6d6bc_remove_server_id_add_connector_name_and_.py  540d516e584e_fix_cascade_delete_constraints.py  543a0ca15c86_convert_connector_id_to_uuid.py  5ddae4192e08_add_user_relationships_to_all_models.py  756941f2c55a_update_mcpconnector_model_with_new_.py  75ec8f84a2b1_remove_custom_role_field_use_fastapi_.py  902b28846d94_add_created_at_and_updated_at_to_.py  910ded28396f_add_expires_at_to_mcp_server_tokens.py  925f850e78fc_fix_mcp_server_tools_schema_with_.py  937bb56cd37e_fix_connector_id_type_to_integer.py  a0a23a61e7cd_add_user_roles_and_connector_access_.py  a5d42366c591_add_cascade_delete_to_connector_access.py  afcc8ff55755_add_fastapi_users_user_table.py  c2608651c99d_add_new_models_structure.py  d62570fd4964_update_mcp_server_tools_make_template_.py  e79dee610a78_add_mode_and_secret_to_connectors.py  f1fb9ea4a9e2_add_mcpserver_table_and_relationship_.py  f8afdb2a25f6_convert_integer_ids_to_uuid.py  facb50928abc_add_md5_constraint_to_secret.py
web/: COOKIE_FIXES.md  (+29 more)
(+98 files in other folders)
