[project]
name = "grafana-connector"
version = "1.0.0"
description = "Grafana MCP Connector for dashboard management with support for multiple Grafana instances"
requires-python = ">=3.12.2"
dependencies = [
    "mcp-pkg",
    "pydantic>=2.0.0",
    "uvicorn>=0.24.0",
    "httpx>=0.27.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-httpx>=0.22.0",
]

[tool.uv.sources]
mcp-pkg = { path = "../../mcp_pkg", editable = true }



