[project]
name = "kubernetes-connector"
version = "1.0.0"
description = "Kubernetes MCP Connector for cluster management with support for multiple clusters"
requires-python = ">=3.12.2"
dependencies = [
    "mcp-pkg",
    "pydantic>=2.0.0",
    "uvicorn>=0.24.0",
    "kubernetes-asyncio>=30.0.0",
    "pyyaml>=6.0.0",
]

[tool.uv.sources]
mcp-pkg = { path = "../../mcp_pkg", editable = true }
