[project]
name = "neo4j-connector"
version = "1.0.0"
description = "Neo4j Graph Database MCP Connector with Cypher query support"
requires-python = ">=3.12.2"
dependencies = [
    "neo4j>=5.0.0",
    "mcp-pkg",
    "pydantic>=2.0.0",
    "uvicorn>=0.24.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[tool.uv.sources]
mcp-pkg = { path = "../../mcp_pkg", editable = true }
