[project]
name = "postgresql-connector"
version = "1.0.0"
description = "Multi-tenant PostgreSQL Database MCP Connector with support for multiple database connections"
requires-python = ">=3.12.2"
dependencies = [
    "sqlalchemy>=2.0.0",
    "mcp-pkg",
    "pydantic>=2.0.0",
    "uvicorn>=0.24.0",
    "psycopg2-binary>=2.9.11",
    "asyncpg>=0.30.0",
    "greenlet>=3.2.4",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
]

[project.optional-dependencies]
postgresql = ["psycopg2-binary>=2.9.0"]
all = [
    "psycopg2-binary>=2.9.0",
    "pyodbc>=5.0.0",
]

[tool.uv.sources]
mcp-pkg = { path = "../../mcp_pkg", editable = true }
