[project]
name = "snowflake-connector"
version = "1.0.0"
description = "Multi-tenant Snowflake MCP Connector with database exploration, SQL query execution, and stage management"
requires-python = ">=3.12.2"
dependencies = [
    "mcp-pkg",
    "pydantic>=2.0.0",
    "uvicorn>=0.24.0",
    "snowflake-connector-python>=3.6.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
]

[tool.uv.sources]
mcp-pkg = { path = "../../mcp_pkg", editable = true }
