[project]
name = "tenants-sqldb-connector"
version = "1.0.0"
description = "Multi-tenant SQL Database MCP Connector with support for multiple database types"
requires-python = ">=3.12.2"
dependencies = [
    "sqlalchemy>=2.0.0",
    "mcp-pkg",
    "pydantic>=2.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
]

[project.optional-dependencies]
postgresql = ["psycopg2-binary>=2.9.0"]
mysql = ["pymysql>=1.1.0"]
mssql = ["pyodbc>=5.0.0"]
oracle = ["cx_oracle>=8.3.0"]
snowflake = ["snowflake-sqlalchemy>=1.5.0"]
all = [
    "psycopg2-binary>=2.9.0",
    "pymysql>=1.1.0",
    "pyodbc>=5.0.0",
    "cx_oracle>=8.3.0",
    "snowflake-sqlalchemy>=1.5.0",
]

[tool.uv.sources]
mcp-pkg = { path = "../../mcp_pkg", editable = true }
